[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["bevy_render", "bevy_asset", "bevy_winit", "wayland", "bevy_core_pipeline", "file_watcher", "tonemapping_luts", "embedded_watcher", "multi-threaded", "bevy_pbr", "dynamic_linking"] }
bevy-inspector-egui = "0.21.0"
